Update the ffx.potential.bonded package to JDK 17 language features